<resources>
    <string name="instruction">Instruksi</string>
    <string name="about">Tentang</string>
    <string name="review">Ulasan</string>
    <string name="comment">Komentar</string>
    <string name="see_comments">Lihat Komentar</string>
    <string name="ingredients">Bahan-bahan</string>
    <string name="tools">Alat-alat</string>
    <string name="steps">Langkah-langkah</string>
    <string name="description">Deskripsi</string>
    <string name="estimate_time">Estimasi Waktu</string>
    <string name="nutrition_information">Informasi Gizi</string>
    <string name="review_summary">Ulasan Singkat</string>

    <string name="rated_by">Diulas sebanyak %d kali</string>
    <string name="comments_count">%d Komentar Pengguna</string>
    <string name="review_now">Ulas Sekarang</string>
    <string name="finish_already">Dah selesai masaknya?</string>
    <string name="cook_for">Kamu memasak selama %s</string>
    <string name="lets_give_review">Beri ulasan yuk!</string>
    <string name="empty_review">"Masih belum terdapat ulasan dari pengguna lain "</string>
</resources>