<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    app:cardBackgroundColor="@color/primary_900"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_review_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/review"
            android:textAllCaps="false"
            android:textColor="@color/primary_900"
            android:textSize="12sp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_message_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/review_now"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/btn_review_now"
            app:layout_constraintStart_toEndOf="@id/iv_close"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/cook_for"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/btn_review_now"
            app:layout_constraintStart_toEndOf="@id/iv_close"
            app:layout_constraintTop_toBottomOf="@id/tv_message_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>