<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="12dp"
    android:paddingHorizontal="16dp"
    android:clipToPadding="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/ingredients"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredients"/>

        <TextView
            android:id="@+id/tv_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tools"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_ingredients"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_tools"/>

        <TextView
            android:id="@+id/tv_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/steps"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/rv_tools"
            app:layout_constraintTop_toBottomOf="@id/rv_tools"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_steps"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>